<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <View
        android:id="@+id/viewResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="@drawable/result_background"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textExpression"
        style="@style/ResultTextView"
        android:layout_marginBottom="@dimen/dp_8"
        android:gravity="end"
        android:maxLines="3"
        android:textSize="@dimen/sp_40"
        app:layout_constraintBottom_toTopOf="@id/textResult"
        app:layout_constraintEnd_toEndOf="@id/viewResult"
        app:layout_constraintStart_toStartOf="@id/viewResult" />

    <TextView
        android:id="@+id/textResult"
        style="@style/ResultTextView"
        android:layout_marginBottom="@dimen/dp_16"
        android:gravity="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_48"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/viewResult"
        app:layout_constraintEnd_toEndOf="@id/viewResult"
        app:layout_constraintStart_toStartOf="@id/viewResult" />

    <Button
        android:id="@+id/button7"
        style="@style/NumberButton"
        android:text="@string/button_7"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="@id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <Button
        android:id="@+id/button8"
        style="@style/NumberButton"
        android:text="@string/button_8"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <Button
        android:id="@+id/button9"
        style="@style/NumberButton"
        android:text="@string/button_9"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="@id/guideline7"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <Button
        android:id="@+id/button4"
        style="@style/NumberButton"
        android:text="@string/button_4"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="@id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />

    <Button
        android:id="@+id/button5"
        style="@style/NumberButton"
        android:text="@string/button_5"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />

    <Button
        android:id="@+id/button6"
        style="@style/NumberButton"
        android:text="@string/button_6"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="@id/guideline7"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />

    <Button
        android:id="@+id/button1"
        style="@style/NumberButton"
        android:text="@string/button_1"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        app:layout_constraintEnd_toEndOf="@id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <Button
        android:id="@+id/button2"
        style="@style/NumberButton"
        android:text="@string/button_2"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <Button
        android:id="@+id/button3"
        style="@style/NumberButton"
        android:text="@string/button_3"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        app:layout_constraintEnd_toEndOf="@id/guideline7"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <Button
        android:id="@+id/button0"
        style="@style/NumberButton"
        android:text="@string/button_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@id/guideline4" />

    <Button
        android:id="@+id/buttonClear"
        style="@style/OperatorButton"
        android:text="@string/button_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline4" />

    <Button
        android:id="@+id/buttonShowResult"
        style="@style/ShowResultButton"
        android:text="@string/button_show_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline7"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintTop_toBottomOf="@id/guideline4" />

    <Button
        android:id="@+id/buttonDivide"
        style="@style/OperatorButton"
        android:text="@string/button_divide"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <Button
        android:id="@+id/buttonMultiply"
        style="@style/OperatorButton"
        android:text="@string/button_multiply"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />

    <Button
        android:id="@+id/buttonMinus"
        style="@style/OperatorButton"
        android:text="@string/button_minus"
        app:layout_constraintBottom_toBottomOf="@id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <Button
        android:id="@+id/buttonPlus"
        style="@style/OperatorButton"
        android:text="@string/button_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/guideline4" />
</androidx.constraintlayout.widget.ConstraintLayout>
